[gd_scene load_steps=19 format=3 uid="uid://cn4t2munve7f6"]

[ext_resource type="Script" uid="uid://blr6bnihi5nof" path="res://scenes/screen_memcard.gd" id="1_npbpi"]
[ext_resource type="Texture2D" uid="uid://bafrbsn0lik63" path="res://sadx out/ad_back_c.webp" id="2_n8wye"]
[ext_resource type="FontFile" uid="uid://bqfgjjocebx3" path="res://sadx out/font/Roboto-Italic-VariableFont_wdth,wght.ttf" id="3_eupkt"]
[ext_resource type="AudioStream" uid="uid://c45vdfahthks7" path="res://sadx out/VOICE_US/0000.wav" id="5_1lebp"]
[ext_resource type="Texture2D" uid="uid://6eg2hoqad13y" path="res://sadx out/AVA_VMSSEL_E/ms_button.png" id="6_7e07b"]
[ext_resource type="Texture2D" uid="uid://dm20so8hboeod" path="res://sadx out/AVA_VMSSEL_E/ms_b_naka.png" id="7_2e50t"]
[ext_resource type="PackedScene" uid="uid://qws7bvnrkuqh" path="res://components/vmu_button.tscn" id="8_1lebp"]
[ext_resource type="FontFile" uid="uid://2ru8kn45as4h" path="res://sadx out/font/Roboto-VariableFont_wdth,wght.ttf" id="11_lsgn8"]
[ext_resource type="AudioStream" uid="uid://byx71hujo1r6d" path="res://sadx out/bgm/option.ogg" id="22_17xor"]

[sub_resource type="Gradient" id="Gradient_1lebp"]
offsets = PackedFloat32Array(0, 0.746094)
colors = PackedColorArray(0, 0.529688, 0.0993163, 1, 0, 0.439216, 0.0823529, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_a2b45"]
gradient = SubResource("Gradient_1lebp")

[sub_resource type="FontVariation" id="FontVariation_7e07b"]
base_font = ExtResource("3_eupkt")
variation_opentype = {
2003072104: 100,
2003265652: 900
}
variation_embolden = 0.3
variation_transform = Transform2D(1.1, 0, 0, 1, 0, 0)
spacing_glyph = 2

[sub_resource type="LabelSettings" id="LabelSettings_87p4l"]
font = SubResource("FontVariation_7e07b")
font_size = 30
outline_size = 7
outline_color = Color(0, 0, 0, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_hp17k"]
atlas = ExtResource("7_2e50t")
region = Rect2(0, 0, 113, 340)

[sub_resource type="Gradient" id="Gradient_b4ll0"]
offsets = PackedFloat32Array(0, 0.90625)
colors = PackedColorArray(0, 0.313726, 1, 1, 0, 0.854902, 0.968627, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_tibdk"]
gradient = SubResource("Gradient_b4ll0")
fill_to = Vector2(0, 1)

[sub_resource type="FontVariation" id="FontVariation_qpgop"]
base_font = ExtResource("11_lsgn8")
variation_opentype = {
2003072104: 100,
2003265652: 800
}

[sub_resource type="LabelSettings" id="LabelSettings_v8vjv"]
font = SubResource("FontVariation_qpgop")
font_size = 18

[node name="ScreenMemcard" type="Control" node_paths=PackedStringArray("focus_on_enter", "bg")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_npbpi")
focus_on_enter = NodePath("HBoxContainer/TextureRect2/TextureRect3/TextureRect2/VBoxContainer/VmuButton")
bg = NodePath("BG")
bg_fades = 3
metadata/_edit_lock_ = true

[node name="BG" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_n8wye")
expand_mode = 1
metadata/_edit_lock_ = true

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 40.0
offset_bottom = 88.0
grow_horizontal = 2
texture = SubResource("GradientTexture1D_a2b45")

[node name="Label" type="Label" parent="TextureRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 40.0
grow_horizontal = 2
grow_vertical = 2
text = "Select a memory card"
label_settings = SubResource("LabelSettings_87p4l")
vertical_alignment = 1

[node name="AudioMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("22_17xor")
autoplay = true
bus = &"Music"

[node name="AudioVoice" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_1lebp")
autoplay = true
bus = &"Voice"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 34.0
offset_top = 96.0
offset_right = -34.0
offset_bottom = -32.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect2" type="TextureRect" parent="HBoxContainer"]
custom_minimum_size = Vector2(140, 42)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 8
texture = ExtResource("6_7e07b")
expand_mode = 1
stretch_mode = 5

[node name="TextureRect3" type="TextureRect" parent="HBoxContainer/TextureRect2"]
show_behind_parent = true
clip_children = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -57.0
offset_top = -331.0
offset_right = 56.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_hp17k")
stretch_mode = 3

[node name="TextureRect2" type="TextureRect" parent="HBoxContainer/TextureRect2/TextureRect3"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_tibdk")

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/TextureRect2/TextureRect3/TextureRect2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -24.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 22
alignment = 1

[node name="VmuButton" parent="HBoxContainer/TextureRect2/TextureRect3/TextureRect2/VBoxContainer" instance=ExtResource("8_1lebp")]
layout_mode = 2

[node name="VmuButton2" parent="HBoxContainer/TextureRect2/TextureRect3/TextureRect2/VBoxContainer" instance=ExtResource("8_1lebp")]
layout_mode = 2
confirm_type = 0

[node name="Label" parent="HBoxContainer/TextureRect2/TextureRect3/TextureRect2/VBoxContainer/VmuButton2" index="2"]
text = "2"

[node name="Label" type="Label" parent="HBoxContainer/TextureRect2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Port A"
label_settings = SubResource("LabelSettings_v8vjv")
horizontal_alignment = 1
vertical_alignment = 1
justification_flags = 162

[node name="TextureRect3" type="TextureRect" parent="HBoxContainer"]
custom_minimum_size = Vector2(140, 42)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 8
texture = ExtResource("6_7e07b")
expand_mode = 1
stretch_mode = 5

[node name="TextureRect3" type="TextureRect" parent="HBoxContainer/TextureRect3"]
show_behind_parent = true
clip_children = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -57.0
offset_top = -331.0
offset_right = 56.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_hp17k")
stretch_mode = 3

[node name="TextureRect2" type="TextureRect" parent="HBoxContainer/TextureRect3/TextureRect3"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_tibdk")

[node name="Label" type="Label" parent="HBoxContainer/TextureRect3"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Port B"
label_settings = SubResource("LabelSettings_v8vjv")
horizontal_alignment = 1
vertical_alignment = 1
justification_flags = 162

[node name="TextureRect4" type="TextureRect" parent="HBoxContainer"]
custom_minimum_size = Vector2(140, 42)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 8
texture = ExtResource("6_7e07b")
expand_mode = 1
stretch_mode = 5

[node name="TextureRect3" type="TextureRect" parent="HBoxContainer/TextureRect4"]
show_behind_parent = true
clip_children = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -57.0
offset_top = -331.0
offset_right = 56.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_hp17k")
stretch_mode = 3

[node name="TextureRect2" type="TextureRect" parent="HBoxContainer/TextureRect4/TextureRect3"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_tibdk")

[node name="Label" type="Label" parent="HBoxContainer/TextureRect4"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Port C"
label_settings = SubResource("LabelSettings_v8vjv")
horizontal_alignment = 1
vertical_alignment = 1
justification_flags = 162

[node name="TextureRect5" type="TextureRect" parent="HBoxContainer"]
custom_minimum_size = Vector2(140, 42)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 8
texture = ExtResource("6_7e07b")
expand_mode = 1
stretch_mode = 5

[node name="TextureRect3" type="TextureRect" parent="HBoxContainer/TextureRect5"]
show_behind_parent = true
clip_children = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -57.0
offset_top = -331.0
offset_right = 56.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_hp17k")
stretch_mode = 3

[node name="TextureRect2" type="TextureRect" parent="HBoxContainer/TextureRect5/TextureRect3"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_tibdk")

[node name="Label" type="Label" parent="HBoxContainer/TextureRect5"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Port D"
label_settings = SubResource("LabelSettings_v8vjv")
horizontal_alignment = 1
vertical_alignment = 1
justification_flags = 162

[connection signal="pressed" from="HBoxContainer/TextureRect2/TextureRect3/TextureRect2/VBoxContainer/VmuButton" to="." method="_on_vmu_button_pressed"]
[connection signal="pressed" from="HBoxContainer/TextureRect2/TextureRect3/TextureRect2/VBoxContainer/VmuButton2" to="." method="_on_vmu_button_2_pressed"]

[editable path="HBoxContainer/TextureRect2/TextureRect3/TextureRect2/VBoxContainer/VmuButton2"]
